# godiscord

./: .env.example  .gitignore  AGENTS.md  BEST_PRACTICES_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md
discord-bot/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
discord-bot/coordinator/: __init__.py
discord-bot/coordinator/core/: __init__.py  config.py
discord-bot/coordinator/discord/: __init__.py  bot.py  formatters.py  reporter.py
discord-bot/coordinator/registries/: __init__.py  agent_registry.py
discord-bot/coordinator/tasks/: __init__.py  queue.py
discord-bot/registries/: agents.yaml  models.yaml
docs/: CHANGELOG.md  OPEN_QUESTIONS.md  STATUS.md
docs/design/: CLI_DESIGN_PRINCIPLES.md  CLI_PATTERNS_COOKBOOK.md  DESIGN_PRINCIPLES.md  PATTERNS_COOKBOOK.md  _INDEX.md
docs/guides/: CLI_EXAMPLES.md  CLI_RELEASE.md  GATEWAY.md  INTERACTIONS.md  MIGRATION.md  PHASE6.md  RATE_LIMITS.md  VIBE_CLI.md  WEBHOOKS.md
docs/plans/: IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  ROADMAP.md
docs/progress/: STATUS.md
gosdk/: .golangci.yml  README.md  go.mod  go.sum
gosdk/cache/: cache.go  cache_test.go
gosdk/cmd/discord/: channel.go  config.go  guild.go  interaction.go  main.go  main_test.go  message.go  webhook.go
gosdk/config/: config.go  config_test.go
gosdk/discord/client/: batch.go  batch_test.go  channels.go  channels_test.go  client.go  client_test.go  commands.go  guilds.go  (+6 more)
gosdk/logger/: logger.go  logger_test.go
gosdk/ratelimit/: strategy.go  strategy_test.go  tracker.go  tracker_test.go
(+71 files in other folders)
